--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,8 @@
 name: golang-pipeline
-on: push
+
+on:
+  push
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -13,30 +16,31 @@ jobs:
           go mod download
 
       - name: Run Unit Tests
-        run: go test
+        run: go test ./...
 
   deploy:
     runs-on: ubuntu-latest
     needs: test
     if: startsWith(github.ref, 'refs/tags')
     steps:
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: "22"
+
       - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Extract Version
         id: version_step
         run: |
-          echo "##[set-output name=version;]VERSION=${GITHUB_REF#$"refs/tags/v"}"
+          echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
           echo "version_tag=${{ secrets.DOCKERHUB_REPOSITORY }}:${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
           echo "latest_tag=${{ secrets.DOCKERHUB_REPOSITORY }}:latest" >> $GITHUB_OUTPUT
-      #          echo "##[set-output name=version_tag;]leaderghm/go-pipeline:${GITHUB_REF#$"refs/tags/v"}"
-      #          echo "##[set-output name=latest_tag;]leaderghm/go-pipeline:latest"
-      #          echo "##[set-output name=version_tag;]$GITHUB_REPOSITORY:${GITHUB_REF#$"refs/tags/v"}"
 
       - name: Print Version
         run: |
-          echo ${{steps.version_step.outputs.version_tag}}
-          echo ${{steps.version_step.outputs.latest_tag}}
+          echo "VERSION TAG: ${{steps.version_step.outputs.version_tag}}"
+          echo "LATEST TAG:  ${{steps.version_step.outputs.latest_tag}}"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -50,19 +54,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: PrepareReg Names
-        id: read-docker-image-identifiers
+      - name: Prepare Tag Names
         run: |
           echo VERSION_TAG=$(echo ${{ steps.version_step.outputs.version_tag }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-          echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag  }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+          echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
 
-      - name: "ls"
+      - name: Show directory
         run: |
           ls -la deployments/production/
-          ls -alF
 
-      - name: Build and push
-        id: docker_build
+      - name: Build and push on dockerhub
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -72,4 +73,18 @@ jobs:
             ${{env.VERSION_TAG}}
             ${{env.LASTEST_TAG}}
           build-args: |
-            ${{steps.version_step.outputs.version}}
+            version=${{steps.version_step.outputs.version}}
+
+      - name: Deploy on Liara platform
+        env:
+          LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
+        run: |
+          node -v
+          npm -v
+          npm i -g @liara/cli@7
+          liara deploy \
+            --app="go-pipeline" \
+            --dockerfile="deployments/production/Dockerfile" \
+            --api-token="$LIARA_TOKEN" \
+            --port="8000" \
+            --no-app-logs
