--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,14 +6,19 @@ on:
       - master
     tags:
       - 'v*'
-  workflow_run:
-    workflows: [ "CI" ]
-    types:
-      - completed
+#  workflow_run:
+#    workflows: [ "CI" ]
+#    types:
+#      - completed
 
 jobs:
   cd:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    #    if: >
+    #      (github.event_name == 'workflow_run' &&
+    #       github.event.workflow_run.conclusion == 'success')
+    #      ||
+    #      (github.event_name == 'push' &&
+    #       startsWith(github.ref, 'refs/tags/v'))
     runs-on: ubuntu-latest
 
     steps:
